0.13
    - pfunc can now distinguish between class and object methods.

0.12  Sat Feb  2 19:41:01 EST 2002
    * Added pfunc
    - Now tested back to 5.004
    * Fixed a bug where certain modules were being ignored
    - Fixed a bug in subroutines_called() with EXPR->method()
    - subroutines_called() now reports properly on function calls
      with symbolic refs

0.11  Sat Feb  2 16:54:23 EST 2002
    * Fixed B::Utils->kids
    * Added subroutines_called()
    * Added superclasses()
    * Added dynamic_method_calls()
    - Documented that it isn't just for modules.
    - name() can now be used to set
    - failures inside B::Module::Info now report their errors instead of
      failing silently
    * Added a THANKS section.

0.10  Wed Dec 12 05:40:14 EST 2001
    * Windows filenames would cause subroutines() and modules_used() to 
      choke. (Thanks to Alessandro Forghieri for the patch)

0.09  Mon Dec 10 14:55:09 EST 2001
    - little bug in modules_used() and "require 5.004"

0.08  Mon Dec 10 14:24:56 EST 2001
    * Implemented modules_used()
    - Fixed a little bug in walkoptree_filtered() and $B::Utils::file/line

0.07  Mon Dec 10 11:09:40 EST 2001
    * Implemented subroutines().  Need help getting modules_used() done.
    - Fixed up $B::Utils::file/line handling in B::Utils.
    - Fixed a little bug in is_core involving cannonical paths.
      I forget who gave me the patch!
    
0.06  Sat Nov 24 20:45:15 EST 2001
    * Implemented packages_inside().  Need help getting the rest done.
    - Distributing a hacked up version of B::Utils until the main
      distribution gets fixed.

0.05  Fri Nov 23 18:06:22 EST 2001
    - Rafael Garcia-Suarez noticed I forgot to deal with code refs in
      @INC.  The plan is to just skip them until someone notices.

0.04  Fri Nov 23 14:49:21 EST 2001
    - Tassilo von Parseval noted warnings.pm isn't backwards compat.
      Replaced with $^W.

0.03  Fri Nov 23 00:39:11 EST 2001
    - Testing all_installed()